[project]
name = "pydocks"
version = "1.0.2"
description = "Pytest fixures for running tests with Docker containers"
authors = [{name = "Sylvain Mouquet", email = "sylvain.mouquet@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]
license = { text = "MIT" }
url = "https://github.com/sylvainmouquet/pydocks"
keywords = ["pytest", "docker", "test", "containers", "pydocks", "postgresql", "vault"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
homepage = "https://github.com/sylvainmouquet/pydocks"
documentation = "https://github.com/sylvainmouquet/pydocks"
repository = "https://github.com/sylvainmouquet/pydocks"
changelog = "https://github.com/sylvainmouquet/pydocks/releases"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "anyio>=4.6.0",
    "asyncpg>=0.30",
    "reattempt>=1.0.10",
    "python-on-whales>=0.73.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.6.7",
    "reattempt>=0.0.1",
    "loguru>=0.7.2",
    "pip>=24.2",
    "aiohttp>=3.10.10",
]

#[project.optional-dependencies]
#postgresql = [
#    "asyncpg>=0.30",
#]

[tool.uv.sources]
pydocks = { path = "pydocks" }
# asyncpg = { path = "../asyncpg" }
# asyncpg = { git = "https://github.com/MagicStack/asyncpg"}

[project.entry-points.pytest11]
pydocks = "pydocks"
